# nothing

./: .gitignore  .replit  README.md  SETUP_INSTRUCTIONS.md  VirtualDoctor_Presentation.md  app.py  install_venv_dependencies.sh  kivy_color_fix.py  kivy_doctor.py  kivy_local.py  main.py  requirements.txt  setup.py  virtualdoctor.db  virtualdoctor.kv
VirtualMedSimulation/: demo_medical_images.py  play_game.py  pyproject.toml  test_local_sqlite.py  web_doctor.py
VirtualMedSimulation/attached_assets/: Pasted--DEBUG-CACHEDIR-home-walentyn-cache-matplotlib-DEBUG-Using-fontManager-instance-from-home--1747905824174.txt  Pasted-Phase-1-Core-Game-Structure-Deadline-4-04-Objectives-Build-Kivy-app-with-screen-management-D-1747850036464.txt
VirtualMedSimulation/data/: medical_data.db
VirtualMedSimulation/models/: diagnosis.py  medication.py
VirtualMedSimulation/screens/: dashboard_screen.py  login_screen.py  medications_screen.py  specialization_select.py
VirtualMedSimulation/templates/: about.html  layout.html  tests.html  treatments.html
VirtualMedSimulation/utils/: database.py  db_manager.py  game_state.py  image_generator.py  local_db.py
assets/: styles.kv
attached_assets/: Pasted--DEBUG-running-rm-f-CMakeCache-txt-CMakeFiles-Traceback-most-recent-call-last-File-f-1747865751427.txt  Pasted--WARNING-install-libs-called-with-no-libraries-to-install-INFO-Building-lapack-for-arm64-v8-1747866660067.txt
data/: medical_data.db  sample_patients.json
kivy/: main.py  thelab.kv
models/: database_models.py  doctor.py  medication_local.py  patient.py  symptoms.py
(+46 files in other folders)
