[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "kivy>=2.3.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "psycopg2-binary>=2.9.10",
    "scipy>=1.15.3",
    "sqlalchemy>=2.0.41",
    "oauthlib>=3.2.2",
    "pyjwt>=2.10.1",
    "flask-dance>=7.1.0",
]
